feat: P04 implement profile/settings/visual state API
